--- a/app/views/members/homes/about.html.erb
+++ b/app/views/members/homes/about.html.erb
@@ -1,42 +1,49 @@
  <div class="row about-head justify-content-center mb-3">
     <div class="col text-center mt-3 px-0">
-      <div class="h3">趣味を楽しみましょう!</div><br>
-      sharehobbyは「趣味」を楽しんでいただくためのサービスです。
-      
-      
-      
+      <div class="h3">趣味で人生をより楽しく。</div><br>
+      <span class="strong">Sharehobby</span>は「趣味」を楽しんでいただくためのマッチングサイトです。<br>
+      <p></p>
+    　新しい「趣味」を始めたい時<br>
+    　自分の「趣味」の楽しみ方の幅を広げたい時<br>
+    　sharehobbyであなたの探している「趣味」がきっと見つかるはずです。<br>
 
+    　<p></p>
+    　<%= link_to "アカウント作成",new_member_registration_path, class: "btn btn-outline-danger", 'data-turbolinks': false %>
+      <%= link_to "ログイン", new_member_session_path, class: 'btn btn-outline-dark mr-3' %>
+      
+      <p></p>
+      以下は簡単な利用方法になります。
     </div>
   </div>
 <div class="container">
   <div class="row about-content">
-    <div class="col-5">
+    <div class="col-3">
       <div class="display-4">step1</div>
+      <div class="step1"></div>
     </div>
-    <div class="col-7 border">
-      
+    <div class="col-9 border">
     </div>
   </div>
   
   <div class="row about-content">
-    <div class="col-7 border"></div>
-    <div class="col-5">
+    <div class="col-9 border"></div>
+    <div class="col-3">
       <div class="display-4">step2</div>
     </div>
   </div>
   
   <div class="row about-content">
-    <div class="col-5">
+    <div class="col-3">
       <div class="display-4">step3</div>
     </div>
-    <div class="col-7 border">
+    <div class="col-9 border">
       
     </div>
   </div>
   
   <div class="row about-content">
-    <div class="col-7 border"></div>
-    <div class="col-5">
+    <div class="col-9 border"></div>
+    <div class="col-3">
       <div class="display-4">step4</div>
     </div>
   </div>
