--- a/app/assets/stylesheets/members/homes.scss
+++ b/app/assets/stylesheets/members/homes.scss
@@ -12,10 +12,19 @@
 // }
 
 .about-head{
-  height: 300px;
+  height: 350px;
   background-color: #f7efa2;
 }
 .about-content{
   height: 400px;
   margin-top: 20px;
+}
+
+.step1 {
+  height: 100px;
+  width: 100%;
+  background-image: url("ste1.jpg");
+  background-size: cover;
+  background-repeat: no-repeat;
+  background-position: top center;
 }
