[update]aboutページ作成

--- a/app/views/members/homes/about.html.erb
+++ b/app/views/members/homes/about.html.erb
@@ -4,13 +4,13 @@
       <span class="strong">Sharehobby</span>は「趣味」を楽しんでいただくためのマッチングサイトです。<br>
       <p></p>
     　新しい「趣味」を始めたい時<br>
-    　自分の「趣味」の楽しみ方の幅を広げたい時<br>
+    　「趣味」の楽しみ方の幅を広げたい時<br>
     　sharehobbyであなたの探している「趣味」がきっと見つかるはずです。<br>
 
     　<p></p>
     　<%= link_to "アカウント作成",new_member_registration_path, class: "btn btn-outline-danger", 'data-turbolinks': false %>
       <%= link_to "ログイン", new_member_session_path, class: 'btn btn-outline-dark mr-3' %>
-      
+
       <p></p>
       以下は簡単な利用方法になります。
     </div>
@@ -21,31 +21,62 @@
       <div class="display-4">step1</div>
       <div class="step1"></div>
     </div>
-    <div class="col-9 border">
+    <div class="col-9 ">
+      <p class="h1">投稿を作ろう！探そう！</p>
+    　<p></p>
+      <p class="h4">始めてみたい「趣味」に関する投稿を<br>
+      自分で作成するのもよし。<br>
+      他人の投稿から探すのもよし。<br>
+      あなたにあった方法で「趣味」探しを始めましょう。
+      </p>
     </div>
   </div>
-  
+
   <div class="row about-content">
-    <div class="col-9 border"></div>
+    <div class="col-9 ">
+      <p class="h1">マッチングしよう！</p>
+      <p></p>
+      <p class="h4">気になる投稿を見つけたら<br>
+      コメントをしたり、お気に入り登録をして保存してみましょう！<br>
+      実際に他のユーザーとやりとりをして、<br>
+      お互いの希望がマッチングすれば取引成立。<br>
+      成立後、2人だけでチャットができるので、細かいやりとりは<br>
+      そちらを有効活用してみてください。<br>
+      </p>
+    </div>
     <div class="col-3">
       <div class="display-4">step2</div>
     </div>
   </div>
-  
+
   <div class="row about-content">
     <div class="col-3">
       <div class="display-4">step3</div>
     </div>
-    <div class="col-9 border">
-      
+    <div class="col-9 ">
+      <p class="h1">「趣味」を楽しもう！</p>
+      <p></p>
+      <p class="h4">マッチングした取引を実際に楽しみましょう。<br>
+      実際に「趣味」を楽しみ<br>
+      お互いが取引に関しての評価をし終えらたら<br>
+      取引は終了です。<br>
+      </p>
     </div>
   </div>
-  
+
   <div class="row about-content">
-    <div class="col-9 border"></div>
+    <div class="col-9 ">
+      <p class="h1">新たな「趣味」を探しに行こう！</p>
+      <p></p>
+      <p class="h4">同じ趣味をさらに楽しんでもよし。<br>
+      違う「趣味」を楽しみたいなら新たに探すのもよし。<br>
+      ここにはユーザーの数だけ、さまざまな「趣味」があります。<br>
+      ぜひ、「趣味」を思う存分楽しんでください。<br>
+      </p>
+    </div>
     <div class="col-3">
       <div class="display-4">step4</div>
     </div>
   </div>
-  
+
 </div>
