[update」評価一覧ページ

--- a/app/views/members/rates/index.html.erb
+++ b/app/views/members/rates/index.html.erb
@@ -14,7 +14,7 @@
   <div class="row mt-5">
     <div class="col">
       <div id="collapseOne" class="collapse contents">
-        <div class="h6 text-center">gooooooooooood</div>
+        <div class="h6 text-center">Good一覧</div>
         <% @good_rates.each do |rate| %>
           <div class="border-bottom">
             <div class="mt-1">
@@ -30,7 +30,7 @@
     </div>
     <div class="col">
       <div id="collapseTwo" class="collapse contents" >
-        <div class="h6 text-center">baaaaaaaaaaaaad</div>
+        <div class="h6 text-center">Bad一覧</div>
         <% @bad_rates.each do |rate| %>
           <div class="border-bottom">
             <div class="mt-1">
